--- a/assets/css/toolbox.css
+++ b/assets/css/toolbox.css
@@ -827,13 +827,17 @@ body .card .content .text .copy .siteLink.otherDomain,
 body .card .content .text .link .siteLink.otherDomain,
 body .card .content .media .imgOverlay.otherDomain,
 body .page header #pmenu .otherDomain {
-    background: #92FE9D;
+    /*background: #92FE9D;
     background: linear-gradient(to left, rgba(0, 201, 255, .75), rgba(146, 254, 157, .75));
     border: none;
     -moz-box-shadow: none;
     -webkit-box-shadow: none;
     box-shadow: none;
-    color: #000000;
+    color: #000000;*/
+    -moz-box-shadow: inset 0 0 0 3px purple;
+    -webkit-box-shadow: inset 0 0 0 3px purple;
+    box-shadow: inset 0 0 0 3px purple;
+    border: none;
 }
 
 .error,
@@ -866,12 +870,8 @@ footer .card .content .text .link .siteLink.opensWindow.opensWindow,
 body .card .content .text .copy .siteLink.opensWindow.opensWindow,
 body .card .content .text .link .siteLink.opensWindow.opensWindow,
 body .card .content .media .imgOverlay.opensWindow.opensWindow {
-    /*background: rgb(146, 232, 66);
+    background: rgb(146, 232, 66);
     background: linear-gradient(to right, rgba(255, 165, 0, 0.75) 0%, rgba(255, 165, 0, 0.75) 25%, rgba(146, 254, 157, .75) 26%, rgba(0, 201, 255, .75) 100%) !important;
-    border: none;*/
-    -moz-box-shadow: inset 0 0 0 3px purple;
-    -webkit-box-shadow: inset 0 0 0 3px purple;
-    box-shadow: inset 0 0 0 3px purple;
     border: none;
 }
 
