--- a/assets/css/toolbox.css
+++ b/assets/css/toolbox.css
@@ -447,7 +447,7 @@ body .card .content .text .copy .siteLink.opensWindow,
 body .card .content .text .link .siteLink.opensWindow,
 body .card .content .media .imgOverlay.opensWindow {
     background: rgb(255, 165, 0);
-    background: linear-gradient(to right, rgba(255, 165, 0, 0.75) 0%, rgba(255, 165, 0, 0.75) 25%, rgba(255, 255, 255, 0) 26%, rgba(146, 232, 66, 0) 100%);
+    background: linear-gradient(to right, rgba(255, 165, 0, 0.75) 0%, rgba(255, 165, 0, 0.75) 25%);
     border: none;
 }
 
@@ -863,6 +863,16 @@ body .page header #pmenu .error {
 .checkContainer {
     text-align: center;
     background: white;
+}
+
+.otherDomain.opensWindow,
+footer .card .content .text .link .siteLink.opensWindow.opensWindow,
+body .card .content .text .copy .siteLink.opensWindow.opensWindow,
+body .card .content .text .link .siteLink.opensWindow.opensWindow,
+body .card .content .media .imgOverlay.opensWindow.opensWindow {
+    background: rgb(146, 232, 66);
+    background: linear-gradient(to right, rgba(255, 165, 0, 0.75) 0%, rgba(255, 165, 0, 0.75) 25%, rgba(146, 254, 157, .75) 26%, rgba(0, 201, 255, .75) 100%) !important;
+    border: none;
 }
 
 .success.opensWindow, .success.opensWindow.otherDomain
