--- a/assets/css/toolbox.css
+++ b/assets/css/toolbox.css
@@ -865,7 +865,7 @@ body .page header #pmenu .error {
     background: white;
 }
 
-.otherDomain.opensWindow,
+/*.otherDomain.opensWindow,
 footer .card .content .text .link .siteLink.opensWindow.opensWindow,
 body .card .content .text .copy .siteLink.opensWindow.opensWindow,
 body .card .content .text .link .siteLink.opensWindow.opensWindow,
@@ -873,7 +873,7 @@ body .card .content .media .imgOverlay.opensWindow.opensWindow {
     background: rgb(146, 232, 66);
     background: linear-gradient(to right, rgba(255, 165, 0, 0.75) 0%, rgba(255, 165, 0, 0.75) 25%, rgba(146, 254, 157, .75) 26%, rgba(0, 201, 255, .75) 100%) !important;
     border: none;
-}
+}*/
 
 .success.opensWindow, .success.opensWindow.otherDomain
 footer .card .content .text .link .siteLink.success.opensWindow,
