--- a/assets/css/toolbox.css
+++ b/assets/css/toolbox.css
@@ -447,7 +447,7 @@ body .card .content .text .copy .siteLink.opensWindow,
 body .card .content .text .link .siteLink.opensWindow,
 body .card .content .media .imgOverlay.opensWindow {
     background: rgb(255, 165, 0);
-    background: linear-gradient(to right, rgba(255, 165, 0, 0.75) 0%, rgba(255, 165, 0, 0.75) 25%, rgba(0, 0, 0, 0.1) 26%, rgba(0, 0, 0, 0.1) 100%,);
+    background: linear-gradient(to right, rgba(255, 165, 0, 0.75) 0%, rgba(255, 165, 0, 0.75) 25%);
     border: none;
 }
 
