--- a/assets/css/toolbox.css
+++ b/assets/css/toolbox.css
@@ -447,8 +447,9 @@ body .card .content .text .copy .siteLink.opensWindow,
 body .card .content .text .link .siteLink.opensWindow,
 body .card .content .media .imgOverlay.opensWindow {
     background: rgb(255, 165, 0);
-    background: linear-gradient(to right, rgba(255, 165, 0, 0.75) 0%, rgba(255, 165, 0, 0.75) 25%);
+    background: linear-gradient(to right, rgba(255, 165, 0, 0.75) 0%, rgba(255, 165, 0, 0.75) 25%, rgba(255, 255, 255, 0) 26%, rgba(146, 232, 66, 0) 100%);
     border: none;
+    color:black;
 }
 
 .hasTitle.opensWindow,
