--- a/assets/css/toolbox.css
+++ b/assets/css/toolbox.css
@@ -571,7 +571,18 @@ spell checker styles
     background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAADCAMAAACDKl70AAAAFVBMVEX////+NQD+NQD+NQD+Sgz+NQD+NQCKU3Z/AAAAB3RSTlMAKVdwqL/ggPdRNgAAABdJREFUCNdjYGRiZGBgYWVhYGBmY2YAAADPAB54rWlqAAAAAElFTkSuQmCC")
 }
 
-
+.spell-check.banned {
+    display: inline-block;
+    vertical-align: initial;
+    padding: 0;
+    margin: 0;
+    color: inherit;
+    font: inherit;
+    background-color: rgba(255, 165, 0);
+    background-position: bottom;
+    background-repeat: repeat-x;
+    background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAADCAMAAACDKl70AAAAFVBMVEX////+NQD+NQD+NQD+Sgz+NQD+NQCKU3Z/AAAAB3RSTlMAKVdwqL/ggPdRNgAAABdJREFUCNdjYGRiZGBgYWVhYGBmY2YAAADPAB54rWlqAAAAAElFTkSuQmCC")
+}
 /*
 ----------------------------------------
 Web Page Test Styles
