Oem banned words+QuinnTest (#18)
* Got an initial version for infiniti banned words

* 5.53

* 5.54

* 5.55

* Added OEM banned word lists

* cleaned up spacing

* Added Audi and BMW to list

* Added new OEM's

* Added Json file. made spellcheck simpler

* Trying to get json to work

* Corrected json

* 1.3

* 1.3

* use rawgit, made spellcheck happen first

* Made banned words correctly highlight the longer phrase (warehouse vs warehouse price)

* Fixed space problems in banned words, changed the readme

* Added Banned word context

* Made doc a .md file

* styled page

* spacing

* added h2 titles

* Added turn on/off

* removed extraneous whitespace

* removed console.log

* added space after function

* removed extraneous space

* fixed spacing after comments

* removed trailing spaces

* added ===

* declaration at top

* dec to top

* var

* var

* Added to readme

* Changed the banned color to yellow

* removed uneeded space

* removed trailing space

* trailing spaces

* trailing spaces

--- a/assets/css/toolbox.css
+++ b/assets/css/toolbox.css
@@ -571,6 +571,19 @@ spell checker styles
     background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAADCAMAAACDKl70AAAAFVBMVEX////+NQD+NQD+NQD+Sgz+NQD+NQCKU3Z/AAAAB3RSTlMAKVdwqL/ggPdRNgAAABdJREFUCNdjYGRiZGBgYWVhYGBmY2YAAADPAB54rWlqAAAAAElFTkSuQmCC")
 }
 
+.spell-check.banned {
+    display: inline-block;
+    vertical-align: initial;
+    padding: 0;
+    margin: 0;
+    color: inherit;
+    font: inherit;
+    background-color: rgb(255, 244, 184);
+    background-position: bottom;
+    background-repeat: repeat-x;
+    background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAADCAMAAACDKl70AAAAFVBMVEX////+NQD+NQD+NQD+Sgz+NQD+NQCKU3Z/AAAAB3RSTlMAKVdwqL/ggPdRNgAAABdJREFUCNdjYGRiZGBgYWVhYGBmY2YAAADPAB54rWlqAAAAAElFTkSuQmCC")
+}
+
 
 /*
 ----------------------------------------
