--- a/docs/assets/css/myStyles.css
+++ b/docs/assets/css/myStyles.css
@@ -9,6 +9,7 @@ header {
   /*background: linear-gradient(to left, #56B4D3, #348F50); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), #000000 url("https://source.unsplash.com/random/1920x920") 100% -155px fixed no-repeat;
   padding: 255px 20px;
+  height: auto;
   position: absolute; }
 
 body header h1 {
