--- a/docs/assets/css/myStyles.css
+++ b/docs/assets/css/myStyles.css
@@ -10,6 +10,7 @@ header {
   background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), #000000 url("https://source.unsplash.com/random/1920x920") 100% -155px fixed no-repeat;
   padding: 255px 20px;
   height: auto;
+  width: auto;
   position: absolute; }
 
 body header h1 {
