--- a/docs/assets/css/myStyles.css
+++ b/docs/assets/css/myStyles.css
@@ -10,6 +10,7 @@ header {
   background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), #000000 url("https://source.unsplash.com/random/1920x920") 100% -155px fixed no-repeat;
   padding: 255px 20px;
   height: auto;
+  width: auto;
   position: absolute; }
 
 body header h1 {
@@ -33,17 +34,28 @@ nav {
   width: 305px;
   z-index: 0; }
 
+nav > h2 {
+  background: #f4f4f4;
+  background: linear-gradient(to left, rgb(76, 162, 205), rgb(103, 178, 111), rgba(255,255,255,0));
+  line-height: 200%;
+  color: rgb(255, 255, 255);
+  padding: 0 10px 0 0; }
+
 section {
+  display: flex;
+  flex-direction: column;
   background: #ffffff;
   /* fallback for old browsers */
-  width: 800px;
-  margin-top: 715px;
-  border: none; }
+  width: 100%;
+  margin: 715px 0 0 0;
+  border: none;
+  border-left: 1px solid #f4f4f4;
+  box-shadow: none; }
 
 footer {
-  left: inherit;
-  margin-left: -580px;
-  right: 9%;
+  left: 1%;
+  margin-left: 0;
+  right: inherit;
   text-align: left;
   width: 300px; }
 
@@ -60,5 +72,3 @@ footer {
 
 #banner .button {
   display: none; }
-
-/*# sourceMappingURL=style.css.map */
