--- a/docs/assets/css/myStyles.css
+++ b/docs/assets/css/myStyles.css
@@ -8,9 +8,7 @@ header {
   /*background: -webkit-linear-gradient(to left, #56B4D3, #348F50);  /* Chrome 10-25, Safari 5.1-6 */
   /*background: linear-gradient(to left, #56B4D3, #348F50); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), #000000 url("https://source.unsplash.com/random/1920x920") 100% -155px fixed no-repeat;
-  padding: 300px 0 225px 0;
-  height: auto;
-  width: auto;
+  padding: 255px 20px;
   position: absolute; }
 
 body header h1 {
@@ -34,28 +32,17 @@ nav {
   width: 305px;
   z-index: 0; }
 
-nav > h3 {
-  background: #f4f4f4;
-  background: linear-gradient(to left, rgb(76, 162, 205), rgb(103, 178, 111), rgba(255,255,255,0));
-  line-height: 200%;
-  color: rgb(255, 255, 255);
-  padding: 0 10px 0 0; }
-
 section {
-  display: flex;
-  flex-direction: column;
   background: #ffffff;
   /* fallback for old browsers */
-  width: 100%;
-  margin: 800px 0 0 0;
-  border: none;
-  border-left: 1px solid #f4f4f4;
-  box-shadow: none; }
+  width: 800px;
+  margin-top: 715px;
+  border: none; }
 
 footer {
-  left: 1%;
-  margin-left: 0;
-  right: inherit;
+  left: inherit;
+  margin-left: -580px;
+  right: 9%;
   text-align: left;
   width: 300px; }
 
@@ -72,3 +59,5 @@ footer {
 
 #banner .button {
   display: none; }
+
+/*# sourceMappingURL=style.css.map */
