--- a/assets/css/toolbox.css
+++ b/assets/css/toolbox.css
@@ -60,6 +60,7 @@ default styles
   z-index: 50000;
   margin: 0 0 5px 0;
   border-radius: 10px;
+  width: 105px;
 }
 
 .tetra.toolBox {
@@ -88,8 +89,11 @@ default styles
   line-height: 20px;
   position: fixed;
   text-transform: lowercase;
-  width: 140px;
+  width: 105px;
+  /* width: 95px; */
+  /* width: 140px; */
   z-index: 99999999;
+  flex-flow: row wrap;
 }
 
 .toolboxContainer.nextgen {
@@ -104,6 +108,7 @@ default styles
 
 .panelTitle.minimized {
   border-radius: 7px;
+  /* width: 100px; */
 }
 
 .panelTitle {
@@ -128,6 +133,7 @@ default styles
 .toolsPanel {
   display: flex;
   flex-flow: column nowrap;
+  /* width: 100px; */
 }
 
 .panelTitle,
@@ -141,7 +147,8 @@ default styles
 }
 
 .appear {
-  display: block
+  display: flex;
+  /* display: block; */
 }
 
 /* buttons */
@@ -152,11 +159,11 @@ default styles
   cursor: pointer;
   font-size: 12px;
   font-weight: normal;
-  top: 15%;
+  /* top: 15%; */
   padding: 4px 0;
-  position: relative;
+  /* position: relative; */
   text-transform: lowercase;
-  width: 135px;
+  /* width: 135px; */
   flex: 0 1 auto;
   width: 100%;
 }
@@ -174,7 +181,9 @@ default styles
 }
 
 .myEDOBut.nextgen {
-  margin: 1px 0 0 -20px;
+  margin: 1px 0 0 -10px;
+  /* margin: 1px 0 0 -5px; */
+  /* margin: 1px 0 0 -20px; */
 }
 
 .tetra.myEDOBut {
@@ -182,14 +191,24 @@ default styles
 }
 
 .myEDOBut.offButt {
-  background: #85D8CE;
-  background: linear-gradient(to left, #085078, #85D8CE);
+  /* background: #85D8CE; */
+  /* background: linear-gradient(to left, #085078, #85D8CE); */
+  background: rgb(221, 29, 46);
+  background: linear-gradient(to left, rgb(162, 33, 37), rgb(210, 78, 79));
   border: 2px solid #000000;
   font-weight: normal;
   color: white;
   width: 90%;
   height: 50px;
   margin: 0;
+}
+
+.myEDOBut.offButt:hover {
+  background: rgb(210, 78, 79);
+  /* background: #f4c4f3; */
+  /* background: linear-gradient(to left, #f4c4f3, #fc67fa); */
+  background: linear-gradient(to left, rgb(221, 29, 46), rgb(243, 41, 61));
+  box-shadow: 0px 0px 30px #D44B48;
 }
 
 .myEDOBut[disabled] {
@@ -233,6 +252,7 @@ default styles
   background: rgb(0, 0, 0);
   color: rgb(255, 255, 255);
   margin: 10px auto;
+  width: 50%;
 }
 
 /* hide button */
@@ -249,6 +269,7 @@ default styles
 
 .hideToolbox.nextgen {
   left: -25px;
+  top: -30px;
   right: initial;
 }
 
@@ -691,6 +712,12 @@ styles without using !important or id selectors
   box-shadow: inset 0 0 0 500px rgba(252, 103, 250, .8);
 }
 
+.landingPage {
+  -moz-box-shadow: inset 0 0 0 500px rgba(252, 103, 250, .8);
+  -webkit-box-shadow: inset 0 0 0 500px rgba(252, 103, 250, .8);
+  box-shadow: inset 0 0 0 500px rgba(252, 103, 250, .8);
+}
+
 body .page nav #pmenu .showNav {
   display: block !important;
 }
@@ -1059,8 +1086,12 @@ toggle tools styles
 
 .refreshPageContainer {
   position: absolute;
-  right: 35px;
-  top: -49px;
+  /* right: 0px; */
+  /* right: 35px; */
+  /* top: -49px; */
+  right: 20px;
+  /* right: 35px; */
+  top: -37px;
   z-index: 500000;
 }
 
